--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>	
-	<button id="myBtn">Try it</button>
+	<div button id="myBtn">Fly</button></div>
 
 <p id="demo"></p>
 
