--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<canvas id="canvas"></canvas>	
-	<div button id="myBtn">Fly</button></div>
+	<canvas id="canvas"></canvas>
+	<p></p>
+	<button id="myBtn">Fly</button>
 
 <p id="demo"></p>
 
