--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
-	<p></p>
-	<button id="myBtn">Fly</button>
+	<div class="text-center">
+		<button id="myBtn">Fly</button>
+	</div>
 
 <p id="demo"></p>
 
